# photom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE.md  README.md  docker-compose.yml  frontend.Dockerfile  pyproject.toml  tox.ini
.github/workflows/: lint.yml  test.yml
frontend/: .gitignore  package.json  svelte.config.js
frontend/src/lib/: AccountList.svelte  ApiClient.js  types.js
frontend/src/routes/: +layout.svelte  +page.svelte
photom/: config.py  exceptions.py  models.py  version.py
photom/api/: _auth.py  asgi.py
photom/store/: base.py  file.py  sqlite.py
tests/: test_config.py  test_stores.py  test_version.py
tests/api/: test_auth.py
