[tool.poetry]
name = "photom"
version = "0.1.0"
description = "Transfer your photos from Google Drive to Google Photos and save some of that precious space you need for your school and work projects. And porn. Mostly porn."
authors = ["Tomas Votava <info@tomasvotava.eu>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "photom", from = "." }]

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pylint = "^2.17.5"
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
isort = "^5.12.0"
poethepoet = "^0.21.1"
tox = "^4.6.4"
pdoc3 = "^0.10.0"
pytest-asyncio = "^0.21.1"
pre-commit = "^3.3.3"
commitizen = "^3.6.0"


[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov=photom",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=json",
    "tests/",
]

[tool.poe.tasks]
todos = "pylint --disable=all --enable=fixme photom/ tests/"
pylint = "pylint photom/ tests/"
mypy = "mypy photom/"
black = "black photom/ tests/"
isort = "isort photom/ tests/"
black-check = "black --check photom/ tests/"
isort-check = "isort --check-only photom/ tests/"

docs = { shell = "rm -rf ./public && pdoc3 --html --output ./.public photom && mv ./.public/photom ./public && rm -rf ./.public" }

lint = ["pylint", "mypy", "black-check", "isort-check"]
format = ["black", "isort"]

test = "pytest tests/"
coverage = "coverage report"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.101.0"
fastapi-sso = "^0.7.2"
pydantic = "^2.1.1"
env-proxy = "^0.1.1"
python-dotenv = "^1.0.0"
uvicorn = "^0.23.2"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
